dataset1235/2025-2/610742602/users/2070606917/executions/677928262_1462915504.log
== SUBMISSION (2025-08-28 20:30:26)
-- CODE: 
from math import tan, radians

lado = float(input('Digite o comprimento do lado do pentágono: '))

apotema = lado / 2 * tan(radians(36)))

area = (5 * lado * apotema) / 2

print(round(area, 2))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:31:19)
-- CODE: 
from math import tan, radians

lado = float(input('Digite o cmprimento do lado do pentágono: '))

apotema = lado / 2 * tan(radians(36)))

area = (5 * lado * apotema) / 2

print(round(area, 2))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:32:16)
-- CODE: 
from math import tan, radians

lado = float(input('Digite o cmprimento do lado do pentágono: '))

apotema = lado / (2 * tan(radians(36)))

area = (5 * lado * apotema) / 2

print(round(area, 2))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o cmprimento do lado do pentágono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o cmprimento do lado do pentágono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o cmprimento do lado do pentágono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o cmprimento do lado do pentágono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o cmprimento do lado do pentágono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o cmprimento do lado do pentágono: 172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:32:20)
-- CODE: 
from math import tan, radians

lado = float(input('Digite o cmprimento do lado do pentágono: '))

apotema = lado / (2 * tan(radians(36)))

area = (5 * lado * apotema) / 2

print(round(area, 2))

# faça seu código aqui!
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o cmprimento do lado do pentágono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o cmprimento do lado do pentágono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o cmprimento do lado do pentágono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o cmprimento do lado do pentágono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o cmprimento do lado do pentágono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o cmprimento do lado do pentágono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:30:25)
-- CODE: 
from math import tan, radians

lado = float(input('Digite o comprimento do lado do pentágono: '))

apotema = lado / 2 * tan(radians(36)))

area = (5 * lado * apotema) / 2

print(round(area, 2))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:31:21)
-- CODE: 
from math import tan, radians

lado = float(input('Digite o cmprimento do lado do pentágono: '))

apotema = lado / 2 * tan(radians(36)))

area = (5 * lado * apotema) / 2

print(round(area, 2))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:31:23)
-- CODE: 
from math import tan, radians

lado = float(input('Digite o cmprimento do lado do pentágono: '))

apotema = lado / 2 * tan(radians(36)))

area = (5 * lado * apotema) / 2

print(round(area, 2))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / 2 * tan(radians(36)))
                                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
